feat: 添加根据序列号获取无人机信息的接口及相关数据结构
