# api/http/v1/drone.go
@@ -19,3 +19,17 @@ type DroneItemResult struct {
 	// LastLoginAt 最后登录时间
 	LastLoginAt string `json:"last_login_at"`
 }
+
+type DroneDetailResult struct {
+	ID                 uint   `json:"id"`
+	SN                 string `json:"sn" binding:"required"`                // 序列号
+	Callsign           string `json:"callsign"`                             // 呼号
+	Domain             int    `json:"domain" binding:"required"`            // 领域
+	Type               int    `json:"type" binding:"required"`              // 类型
+	SubType            int    `json:"sub_type" binding:"required"`          // 子类型
+	ProductModel       string `json:"product_model" binding:"required"`     // 产品型号
+	ProductModelKey    string `json:"product_model_key" binding:"required"` // 产品型号标识符
+	Status             string `json:"status"`                               // 在线状态
+	IsRTKAvailable     bool   `json:"is_rtk_available"`                     // 是否支持RTK◊
+	IsThermalAvailable bool   `json:"is_thermal_available"`                 // 是否支持热成像
+}
